added: notes crud operations & modified: userSlice for easier readibility

--- a/src/components/Screen.css
+++ b/src/components/Screen.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@200&display=swap");
 
-.mainback {
+.main-back {
     min-height: 93vh;
     display: flex;
     padding: 10px 0;
